workaround - fix the resolution & scrollbar issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -257,15 +257,18 @@ main {
   display: flex;
 }
 
+html {
+  font-size: 73%;
+}
 
 @media (min-width: 1200px) and (min-height: 800px) {
   main {
-    min-width: 100vw;
-    min-height: 100vh;
+  /*  width: 100vw;
+    height: 100vh;*/
   }
-  html {
+  /*html {
     overflow: hidden;
-  }
+  }*/
 }
 
 @media (max-width: 1200px) {
